cmake_minimum_required(VERSION 3.20)
project(destiny_place_cpp)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(algorithm)
add_subdirectory(cache)
add_subdirectory(design_princples)
add_subdirectory(leetcode)
add_subdirectory(memory_pool)
add_subdirectory(message_queue)
add_subdirectory(playground)
add_subdirectory(some_knowledge)
